Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   line-height: 1.5;
+  margin-top: auto;
 }
 
 h1 {
